--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -3,7 +3,7 @@ on:
   release:
     types: [published]
 jobs:
-  deploy_pypi:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
