--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -23,3 +23,6 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.pypi_password }}
+        repository_url: https://test.pypi.org/legacy/
+        verbose: true
+
