--- a/deployment/mfbot-cfn-template.yml
+++ b/deployment/mfbot-cfn-template.yml
@@ -1,37 +1,28 @@
 Description: Cloudformation Stack for Deploying Metaflowbot
 Parameters:
-  AdminUserAddress:
-    Description: Email address of the admin user in the workspace
+  AdminEmailAddress:
+    Description: Email address of the admin user in the slack workspace
     Type: String
-  DeploymentAvailablityZone:
-    Description: Availability zone where the bot gets deployed
-    Type: AWS::EC2::AvailabilityZone::Name
-  MetadaAuth:
-    Default: METADATA_AUTH
-    Description: Name Of Metadata Auth Parameter in Secrets Manager.
+  MetadataServiceAuthParameterKey:
+    Default: METADATASERVICE_AUTH_KEY
+    Description: Key for Metadata service auth parameter in Secrets Manager.
     Type: String
   MetadataServiceUrl:
-    Description: URL to the Metaflow metadata service
+    Description: URL of the metadata service
     Type: String
-  MetaflowS3BucketARN:
-    Description: Metaflow S3 Bucket ARN
+  MetaflowDatastoreSysrootS3:
+    Description: 'Amazon S3 URL for Metaflow DataStore '
     Type: String
-  MetaflowS3Root:
-    Description: S3 Root Path Of Metaflow
+  MetaflowbotSecretsManagerARN:
+    Description: ARN of the secret holding Metaflowbot credentials in Secrets Manager
     Type: String
-  MetaflowUsername:
-    Description: Username for Metaflow
+  SlackAppTokenParameterKey:
+    Default: SLACK_APP_TOKEN_KEY
+    Description: Key for SLACK_APP_TOKEN parameter in Secrets Manager.
     Type: String
-  MfbotSecretsArn:
-    Description: ARN of the Secret holding MF Bot credentials stored in Secrets manager
-    Type: String
-  SlackAppToken:
-    Default: SLACK_APP_TOKEN
-    Description: Name Of SLACK_APP_TOKEN Parameter in Secrets Manager.
-    Type: String
-  SlackBotToken:
-    Default: SLACK_BOT_TOKEN
-    Description: Name Of SLACK_BOT_TOKEN Parameter in Secrets Manager.
+  SlackBotTokenParameterKey:
+    Default: SLACK_BOT_TOKEN_KEY
+    Description: Key for SLACK_BOT_TOKEN parameter in Secrets Manager.
     Type: String
 Resources:
   EcsClusterRole:
@@ -75,7 +66,7 @@ Resources:
               - secretsmanager:GetSecretValue
             Effect: Allow
             Resource:
-              - !Ref 'MfbotSecretsArn'
+              - !Ref 'MetaflowbotSecretsManagerARN'
             Sid: S3GetObject
         Version: '2012-10-17'
       PolicyName: Metaflowbot
@@ -108,7 +99,10 @@ Resources:
     Type: AWS::ECS::Service
   MetaflowbotDeploymentSubnet:
     Properties:
-      AvailabilityZone: !Ref 'DeploymentAvailablityZone'
+      AvailabilityZone: !Select
+        - 0
+        - !GetAZs
+          Ref: AWS::Region
       CidrBlock: 10.0.0.0/24
       MapPublicIpOnLaunch: true
       VpcId: !Ref 'MetaflowbotPublicVpc'
@@ -126,42 +120,42 @@ Resources:
                 - ''
                 - - '{{'
                   - 'resolve:secretsmanager:'
-                  - !Ref 'MfbotSecretsArn'
+                  - !Ref 'MetaflowbotSecretsManagerARN'
                   - ':SecretString:'
-                  - !Ref 'SlackBotToken'
+                  - !Ref 'SlackBotTokenParameterKey'
                   - '}}'
             - Name: ADMIN_USER_ADDRESS
-              Value: !Ref 'AdminUserAddress'
+              Value: !Ref 'AdminEmailAddress'
             - Name: SLACK_APP_TOKEN
               Value: !Join
                 - ''
                 - - '{{'
                   - 'resolve:secretsmanager:'
-                  - !Ref 'MfbotSecretsArn'
+                  - !Ref 'MetaflowbotSecretsManagerARN'
                   - ':SecretString:'
-                  - !Ref 'SlackAppToken'
+                  - !Ref 'SlackAppTokenParameterKey'
                   - '}}'
             - Name: USERNAME
-              Value: !Ref 'MetaflowUsername'
+              Value: slackbot
             - Name: METAFLOW_SERVICE_AUTH_KEY
               Value: !Join
                 - ''
                 - - '{{'
                   - 'resolve:secretsmanager:'
-                  - !Ref 'MfbotSecretsArn'
+                  - !Ref 'MetaflowbotSecretsManagerARN'
                   - ':SecretString:'
-                  - !Ref 'MetadaAuth'
+                  - !Ref 'MetadataServiceAuthParameterKey'
                   - '}}'
             - Name: METAFLOW_SERVICE_URL
               Value: !Ref 'MetadataServiceUrl'
             - Name: METAFLOW_DATASTORE_SYSROOT_S3
-              Value: !Ref 'MetaflowS3Root'
+              Value: !Ref 'MetaflowDatastoreSysrootS3'
             - Name: METAFLOW_DEFAULT_DATASTORE
               Value: s3
             - Name: METAFLOW_DEFAULT_METADATA
               Value: service
           Essential: true
-          Image: valaygaurang/metaflowbot:0.9.12
+          Image: valaygaurang/metaflowbot
           Name: metaflowbot
       Cpu: '4096'
       ExecutionRoleArn: !GetAtt 'EcsClusterRole.Arn'
@@ -214,11 +208,21 @@ Resources:
         Statement:
           - Action:
               - s3:GetObject
+              - s3:HeadObject
+              - s3:ListObjects
+              - s3:ListObjectsV2
             Effect: Allow
             Resource:
               - !Join
                 - ''
-                - - !Ref 'MetaflowS3BucketARN'
+                - - !Join
+                    - ''
+                    - - 'arn:aws:s3:::'
+                      - !Select
+                        - 1
+                        - !Split
+                          - s3://
+                          - !Ref 'MetaflowDatastoreSysrootS3'
                   - /*
             Sid: S3GetObject
         Version: '2012-10-17'
