removed s3:headobject, s3:listobjects - s3:headobject,listobjects is covered by getobject

--- a/deployment/mfbot-cfn-template.yml
+++ b/deployment/mfbot-cfn-template.yml
@@ -223,9 +223,7 @@ Resources:
         Statement:
           - Action:
               - s3:GetObject
-              - s3:HeadObject
-              - s3:ListObjects
-              - s3:ListObjectsV2
+              - s3:ListBucket
             Effect: Allow
             Resource:
               - !Join
