Tweeking ghaction for docker file

--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -1,25 +1,18 @@
 name: Docker Image CI
 on:
   push:
-    branches: [deployment]    
+    branches: [deployment]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - uses: actions/checkout@v2
+      - uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/metaflowbot
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/metaflowbot:latest
+          repository: outerbounds/metaflowbot
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: "latest"
           dockerfile: ${{ github.workspace }}/Dockerfile
