--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -6,13 +6,32 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: outerbounds/metaflowbot
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: "latest"
-          dockerfile: ${{ github.workspace }}/Dockerfile
+  - name: Checkout
+    uses: actions/checkout@v2
+  - name: Docker meta
+    id: meta
+    uses: docker/metadata-action@v3
+    with:
+      images: |
+        outerbounds/metaflowbot
+      tags: |
+        type=ref,event=branch
+        type=ref,event=pr
+        type=semver,pattern={{version}}
+        type=semver,pattern={{major}}.{{minor}}
+        type=sha
+  - name: Set up Docker Buildx
+    uses: docker/setup-buildx-action@v1
+  - name: Login to DockerHub
+    if: github.event_name != 'pull_request'
+    uses: docker/login-action@v1 
+    with:
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+  - name: Build and push
+    uses: docker/build-push-action@v2
+    with:
+      context: .
+      push: ${{ github.event_name != 'pull_request' }}
+      tags: ${{ steps.meta.outputs.tags }}
+      labels: ${{ steps.meta.outputs.labels }}
