Fixed name of the bot repo in cf template

--- a/deployment/mfbot-cfn-template.yml
+++ b/deployment/mfbot-cfn-template.yml
@@ -136,7 +136,7 @@ Resources:
             - Name: METAFLOW_DEFAULT_METADATA
               Value: service
           Essential: true
-          Image: valaygaurang/metaflowbot
+          Image: outerbounds/metaflowbot
           LogConfiguration:
             LogDriver: awslogs
             Options:
